<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.santa.MainActivity">


    <ImageView
        android:id="@+id/santa_image"
        android:contentDescription="@string/head_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/santas_workshop"
        android:scaleType="centerCrop"/>


    <TextView
        android:id="@+id/headline_business"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/headline"
        style="@style/headline" />

    <TextView
        android:id="@+id/subline_business"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/subline"
        style="@style/subline"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/contact_box">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:drawableStart="@drawable/email_icon"
            android:drawableLeft="@drawable/email_icon"
            style="@style/contact_child"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:drawableStart="@drawable/phone_icon"
            android:drawableLeft="@drawable/phone_icon"
            style="@style/contact_child"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:drawableStart="@drawable/web_icon"
            android:drawableLeft="@drawable/web_icon"
            style="@style/contact_child"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:drawableStart="@drawable/location_icon"
            android:drawableLeft="@drawable/location_icon"
            style="@style/contact_child"
           />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_subline"
            android:drawableStart="@drawable/time_icon"
            android:drawableLeft="@drawable/time_icon"
            style="@style/contact_child"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/opening_hours_week"
             style="@style/opening_hours"
                />
            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/opening_hours_weekend"
             style="@style/opening_hours"/>
        </LinearLayout>
</LinearLayout>
    </ScrollView>
    </LinearLayout>





